<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vr_tcp_bridge</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2422581995@qq.com">ycn</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>msgs_init</depend>
  <depend>urdf</depend>  <!--新加-->
  <depend>xacro</depend> <!--新加-->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
